# ai_news_aggregator

./: .env  .env.example  pyproject.toml
app/: __init__.py
app/core/: __init__.py  config.py
app/ingestion/: __init__.py  channels.py  openai_research.py  youtube.py
app/memory_files/openai_research/: scraped_2026-03-09.md
app/memory_files/youtube/: scraped_2026-03-09.md
app/scripts/: run_openai_research_ingest.py  run_youtube_ingest.py
